[package]
name = "cdchunking"
version = "1.0.0"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Content-defined chunking"
documentation = "https://docs.rs/cdchunking/"
readme = "README.md"
repository = "https://github.com/remram44/cdchunking-rs"
keywords = ["chunks", "cdc", "content", "defined", "chunking"]
license = "MIT"

[dependencies]

[dev-dependencies]
rand = "0.6"
