[package]
name = "cdchunking"
version = "1.0.1"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Content-defined chunking"
documentation = "https://docs.rs/cdchunking/"
readme = "README.md"
repository = "https://github.com/remram44/cdchunking-rs"
keywords = ["chunks", "cdc", "content", "defined", "chunking"]
license = "MIT"
rust-version = "1.31"

[dependencies]

[dev-dependencies]
rand = "0.6"
